--- a/src/Components/Navbar/Navbar.module.scss
+++ b/src/Components/Navbar/Navbar.module.scss
@@ -1,10 +1,15 @@
 .nav{
-  position: absolute;
+  position: fixed;
   width: 100%;
+  z-index: 10;
 
   background-color: rgba(0, 0, 0, .2);
   backdrop-filter: blur(5px);
   box-shadow: 0 1px 0 #313D5A;
+
+  a{
+    cursor: pointer;
+  }
   
   @media screen and (max-width: 766px){
     a{
