--- a/src/pages/Projetos/Projetos.module.scss
+++ b/src/pages/Projetos/Projetos.module.scss
@@ -6,6 +6,7 @@
   background-repeat: no-repeat;
   background-position: center;
   background-size: cover;
+  background-attachment: fixed;
   
   &:before{
     content: "";
@@ -21,6 +22,10 @@
   .content{
     height: 100%;
     position: relative;
+
+    .url{
+      height: 22px;
+    }
 
     img{
       width: 100%;
