--- a/src/index.css
+++ b/src/index.css
@@ -22,6 +22,10 @@ time, mark, audio, video {
 	font-family: "Roboto", sans-serif;
 	vertical-align: baseline;
 }
+
+html{
+	background-color: #05070E;
+}
 /* HTML5 display-role reset for older browsers */
 article, aside, details, figcaption, figure, 
 footer, header, hgroup, menu, nav, section {
